modificado layout de todos los componentes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 .tituloClass{
-    font-family: 'Nerko One', cursive;
+    font-family: 'Oswald', sans-serif;
     font-size: 3rem;
     color: white;
 }
+
