--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-3">
-  <div class="text-center tituloClass">CITAS MEDICAS</div>
+  <div class="text-center tituloClass">Consulta Médica</div>
   <div class="row mt-3">
     <div class="col-lg-6">
       <app-crear-cita></app-crear-cita>
