--- a/src/app/components/crear-cita/crear-cita.component.html
+++ b/src/app/components/crear-cita/crear-cita.component.html
@@ -1,23 +1,27 @@
-<div class="card bg-light">
+<div class="card">
     <div class="card-body">
-        <h5 class="card-title text-center">Agregar Cita</h5>
+        <h5 class="card-title text-center">Adicionar Cita</h5>
 
         <div class="form-group mb-3">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" class="form-control" placeholder="Ingrese su nombre">
+            <label for="nombre">Nome</label>
+            <input type="text" id="nombre" class="form-control" placeholder="Insira seu nome">
         </div>
+
         <div class="form-group mb-3">
-            <label for="fecha">Fecha</label>
+            <label for="fecha">Data</label>
             <input type="date" id="fecha" class="form-control">
         </div>
+
         <div class="form-group mb-3">
             <label for="hora">Hora</label>
             <input type="time" id="hora" class="form-control">
         </div>
+
         <div class="form-group mb-3">
             <label for="sintomas">Sintomas</label>
-            <textarea id="sintomas"  rows="3" class="form-control" placeholder="Ingrese los sintomas"></textarea>
+            <textarea id="sintomas"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
         </div>
-        <button style="width: 100%;" class="btn btn-primary btn-block">Agregar Cita</button>
+        
+        <button style="width: 100%;" class="btn btn-primary btn-block">Adicionar Cita</button>
     </div>
 </div>
