--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light">
+<div class="card">
     <div class="card-body">
         <h5 class="card-title text-center">Listado de Citas</h5>
     </div>
