--- a/src/app/components/crear-cita/crear-cita.component.html
+++ b/src/app/components/crear-cita/crear-cita.component.html
@@ -1,27 +1,33 @@
 <div class="card">
     <div class="card-body">
         <h5 class="card-title text-center">Adicionar Cita</h5>
+        <div *ngIf="formularioIncorrecto" class="tex-center">
+        <span class="badge bg-danger">Todos os campos são obrigatorios</span>
+        </div>
 
         <div class="form-group mb-3">
             <label for="nombre">Nome</label>
-            <input type="text" id="nombre" class="form-control" placeholder="Insira seu nome">
+            <input type="text" id="nombre"
+            [(ngModel)]="nome" class="form-control" placeholder="Insira seu nome">
         </div>
 
         <div class="form-group mb-3">
             <label for="fecha">Data</label>
-            <input type="date" id="fecha" class="form-control">
+            <input type="date" id="fecha"
+            [(ngModel)]="data" class="form-control">
         </div>
 
         <div class="form-group mb-3">
             <label for="hora">Hora</label>
-            <input type="time" id="hora" class="form-control">
+            <input type="time" id="hora"
+            [(ngModel)]="hora" class="form-control">
         </div>
 
         <div class="form-group mb-3">
             <label for="sintomas">Sintomas</label>
-            <textarea id="sintomas"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
+            <textarea id="sintomas" [(ngModel)]="sintomas"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
         </div>
         
-        <button style="width: 100%;" class="btn btn-primary btn-block">Adicionar Cita</button>
+        <button style="width: 100%;" (click)="agregarCita()" class="btn btn-primary btn-block">Adicionar Cita</button>
     </div>
 </div>
