--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -1,5 +1,5 @@
-<div class="card">
+<div *ngIf="listadoCitas.length === 0" class="card">
     <div class="card-body">
-        <h5 class="card-title text-center">Listado de Citas</h5>
+        <h5 class="card-title text-center">Não há compromissos para mostrar</h5>
     </div>
 </div>
