--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -10,6 +10,7 @@
         <p class="card-text"><span>Data: </span> {{ cita.data }} </p>
         <p class="card-text"><span>Hora: </span> {{ cita.hora }} </p>
         <p class="card-text"><span>Sintomas: </span> {{ cita.sintomas }} </p>
-        <button style="width: 100%;" class="btn btn-danger btn-block" (click)="eliminarCita(i)" >ELIMINAR</button>
+        <button style="width: 50%;" class="btn btn-danger btn-block" (click)="eliminarCita(i)" >Eliminar</button>
+        <button style="width: 50%;" class="btn btn-danger btn-block" (click)="editarCita(i)" >Editar</button>
     </div>
 </div>
