add Routing Module e service

--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -1,15 +1,15 @@
-<div *ngIf="listadoCitas.length === 0" class="card">
+<div class="card">
     <div class="card-body">
         <h5 class="card-title text-center">Não há compromissos para mostrar</h5>
     </div>
 </div>
-<div *ngFor="let cita of listadoCitas; let i = index" class="card mb-2">
+<div *ngFor="let cita of Citas; let i = index" class="card mb-2">
     <div class="card-body">
-        <h4 class="card-title text-center"><span> {{ cita.nome }}, sua cita está pronta.</span></h4>
-        <p class="card-text"><span>Nome: </span> {{ cita.nome }} </p>
-        <p class="card-text"><span>Data: </span> {{ cita.data }} </p>
-        <p class="card-text"><span>Hora: </span> {{ cita.hora }} </p>
-        <p class="card-text"><span>Sintomas: </span> {{ cita.sintomas }} </p>
+        <h4 class="card-title text-center"><span> {{ citas.nome }}, sua cita está pronta.</span></h4>
+        <p class="card-text"><span>Nome: </span> {{ citas.nome }} </p>
+        <p class="card-text"><span>Data: </span> {{ citas.data }} </p>
+        <p class="card-text"><span>Hora: </span> {{ citas.hora }} </p>
+        <p class="card-text"><span>Sintomas: </span> {{ citas.sintomas }} </p>
         <button style="width: 50%;" class="btn btn-danger btn-block" (click)="eliminarCita(i)" >Eliminar</button>
         <button style="width: 50%;" class="btn btn-danger btn-block" (click)="editarCita(i)" >Editar</button>
     </div>
