--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-3">
+<!-- <div class="container pt-3">
   <div class="text-center tituloClass">Consulta Médica</div>
   <div class="row mt-3">
     <div class="col-lg-6">
@@ -9,3 +9,21 @@
     </div>
   </div>
 </div>
+ -->
+
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand">Consulta Médica</a>
+
+  <div id="navbarNav" class="collapse navbar-collapse">
+    <ul class="navbar-nav ml-auto ">
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/crear-cita">Crear Cita</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/list-citas">Listar Cita</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<router-outlet></router-outlet>
