add bootswatch update crear cita, list-cita

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,19 +11,21 @@
 </div>
  -->
 
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Consulta Médica</a>
-
-  <div id="navbarNav" class="collapse navbar-collapse">
-    <ul class="navbar-nav ml-auto ">
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/crear-cita">Crear Cita</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/list-citas">Listar Cita</a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container">
+    <a class="navbar-brand">Consulta Médica</a>
+    <div id="navbarNav" class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto ">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/crear-cita">Crear Cita</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/list-citas">Listar Cita</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
-
-<router-outlet></router-outlet>
+<div class="container pt-4">
+  <router-outlet></router-outlet>
+</div>
