--- a/src/app/components/crear-cita/crear-cita.component.html
+++ b/src/app/components/crear-cita/crear-cita.component.html
@@ -4,30 +4,30 @@
         <div *ngIf="formularioIncorrecto" class="tex-center">
         <span class="badge bg-danger">Todos os campos são obrigatorios</span>
         </div>
+        <form>
+            <div class="form-group mb-3">
+                <label for="nombre">Nome</label>
+                <input type="text" name="Name"
+                [(ngModel)]="nome" class="form-control" placeholder="Insira seu nome">
+            </div>
 
-        <div class="form-group mb-3">
-            <label for="nombre">Nome</label>
-            <input type="text" id="nombre"
-            [(ngModel)]="nome" class="form-control" placeholder="Insira seu nome">
-        </div>
+            <div class="form-group mb-3">
+                <label for="fecha">Data</label>
+                <input type="date" name="date"
+                [(ngModel)]="data" class="form-control">
+            </div>
 
-        <div class="form-group mb-3">
-            <label for="fecha">Data</label>
-            <input type="date" id="fecha"
-            [(ngModel)]="data" class="form-control">
-        </div>
+            <div class="form-group mb-3">
+                <label for="hora">Hora</label>
+                <input type="time" name="time"
+                [(ngModel)]="hora" class="form-control">
+            </div>
 
-        <div class="form-group mb-3">
-            <label for="hora">Hora</label>
-            <input type="time" id="hora"
-            [(ngModel)]="hora" class="form-control">
-        </div>
-
-        <div class="form-group mb-3">
-            <label for="sintomas">Sintomas</label>
-            <textarea id="sintomas" [(ngModel)]="sintomas"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
-        </div>
-        
-        <button style="width: 100%;" (click)="agregarCita()" class="btn btn-primary btn-block">Adicionar Cita</button>
+            <div class="form-group mb-3">
+                <label for="sintomas">Sintomas</label>
+                <textarea name="description" [(ngModel)]="sintomas"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
+            </div>
+            <button style="width: 100%;" (click)="agregarCita()" class="btn btn-primary btn-block">Adicionar Cita</button>
+        </form>
     </div>
 </div>
