--- a/src/app/components/crear-cita/crear-cita.component.html
+++ b/src/app/components/crear-cita/crear-cita.component.html
@@ -8,26 +8,26 @@
             <div class="form-group mb-3">
                 <label for="nombre">Nome</label>
                 <input type="text" name="Name"
-                [(ngModel)]="nome" class="form-control" placeholder="Insira seu nome">
+                [(ngModel)]="cita.Name" class="form-control" placeholder="Insira seu nome">
             </div>
 
             <div class="form-group mb-3">
                 <label for="fecha">Data</label>
                 <input type="date" name="date"
-                [(ngModel)]="data" class="form-control">
+                [(ngModel)]="cita.date" class="form-control">
             </div>
 
             <div class="form-group mb-3">
                 <label for="hora">Hora</label>
                 <input type="time" name="time"
-                [(ngModel)]="hora" class="form-control">
+                [(ngModel)]="cita.time" class="form-control">
             </div>
 
             <div class="form-group mb-3">
                 <label for="sintomas">Sintomas</label>
-                <textarea name="description" [(ngModel)]="sintomas"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
+                <textarea name="description" [(ngModel)]="cita.description"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
             </div>
-            <button style="width: 100%;" (click)="agregarCita()" class="btn btn-primary btn-block">Adicionar Cita</button>
+            <button style="width: 100%;" (click)="createNewCita()" class="btn btn-primary btn-block">Adicionar Cita</button>
         </form>
     </div>
 </div>
