modificado layout dos componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     <div id="navbarNav" class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto ">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" routerLink="/crear-cita">Crear Cita</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/crear-cita"> <span>Crear Cita</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/list-citas">Listar Cita</a>
