--- a/src/app/components/crear-cita/crear-cita.component.css
+++ b/src/app/components/crear-cita/crear-cita.component.css
@@ -6,6 +6,8 @@ label {
     margin: 0px 40px;
     background-color: #ffffff;
     color: #000000;
+    margin: 0 auto; 
+    float: none;  
 }
 
 input {
@@ -18,4 +20,4 @@ textarea {
     background: none;
     color: #000000;
     border-color: #000000;
-}
+} 
