--- a/src/app/components/crear-cita/crear-cita.component.html
+++ b/src/app/components/crear-cita/crear-cita.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" style="width: 50%;">
     <div class="card-body">
         <h4 class="card-title text-center">Adicionar Cita</h4>
         <div *ngIf="formularioIncorrecto" class="tex-center">
