--- a/src/app/components/list-citas/list-citas.component.css
+++ b/src/app/components/list-citas/list-citas.component.css
@@ -2,6 +2,10 @@
     margin: 0px 40px;
     background-color: #ffffff;
     color: #000000;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-content: flex-start
 }
 
 span {
