--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -1,16 +1,23 @@
-<div class="card">
+<div class="card" style="width: 50%;">
     <div class="card-body">
         <h5 class="card-title text-center">Não há compromissos para mostrar</h5>
     </div>
 </div>
-<div *ngFor="let cita of citas" class="card mb-2">
+
+
+ <div *ngFor="let cita of citas" class="card mb-3" style="width: 30%;">
     <div class="card-body">
         <h4 class="card-title text-center"><span> {{ cita.Name }}, sua cita está pronta.</span></h4>
         <p class="card-text"><span>Nome: </span> {{ cita.Name }} </p>
         <p class="card-text"><span>Data: </span> {{ cita.date }} </p>
         <p class="card-text"><span>Hora: </span> {{ cita.time }} </p>
         <p class="card-text"><span>Sintomas: </span> {{ cita.description }} </p>
-        <button style="width: 50%;" class="btn btn-danger btn-block" (click)="eliminarCita(i)" >Eliminar</button>
-        <button style="width: 50%;" class="btn btn-danger btn-block" (click)="editarCita(i)" >Editar</button>
+        
+                
+                    <button class="btn btn-danger btn-block" (click)="eliminarCita(i)" >Eliminar</button>
+                    <button class="btn btn-danger btn-block" (click)="editarCita(i)" >Editar</button>
     </div>
-</div>
+</div> 
+
+    <!--  -->
+    
