--- a/src/styles.css
+++ b/src/styles.css
@@ -3,5 +3,6 @@ body {
     background-image: linear-gradient( rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(./assets/imgcitas.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100vh;
 }
