--- a/src/app/components/list-citas/list-citas.component.css
+++ b/src/app/components/list-citas/list-citas.component.css
@@ -2,10 +2,12 @@
     margin: 0px 40px;
     background-color: #ffffff;
     color: #000000;
-    display: flex;
+    margin: 0 auto; 
+    float: none; 
+    /* display: flex;
     flex-direction: row;
     justify-content:space-between;
-    align-content: flex-start
+    align-content: flex-start */
 }
 
 span {
