--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -5,7 +5,7 @@
 </div>
 
 
- <div *ngFor="let cita of citas" class="card mb-3" style="width: 30%;">
+ <div *ngFor="let cita of citas" class="card mb-3" style="width: 50%;">
     <div class="card-body">
         <h4 class="card-title text-center"><span> {{ cita.Name }}, sua cita está pronta.</span></h4>
         <p class="card-text"><span>Nome: </span> {{ cita.Name }} </p>
@@ -14,8 +14,10 @@
         <p class="card-text"><span>Sintomas: </span> {{ cita.description }} </p>
         
                 
-                    <button class="btn btn-danger btn-block" (click)="eliminarCita(i)" >Eliminar</button>
-                    <button class="btn btn-danger btn-block" (click)="editarCita(i)" >Editar</button>
+        <button class="btn btn-danger btn-block" (click)="deleteCita(cita.id)" >Eliminar</button>
+                    
+        <button class="btn btn-danger btn-block" (click)="editarCita(i)" >Editar</button>
+
     </div>
 </div> 
 
