--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -8,7 +8,7 @@
 
 <div class="container">
     <div class="row">
-        <div *ngFor="let cita of citas; let i = index" class="card md-3 mb-2" style="width: 33%;">
+        <div *ngFor="let cita of citas" class="card md-3 mb-2" style="width: 33%;">
             <div class="card-body">
                 <h4 class="card-title text-center"><span> {{ cita.Name }}, sua cita está pronta.</span></h4>
                 <p class="card-text"><span>Nome: </span> {{ cita.Name }} </p>
@@ -17,7 +17,7 @@
                 <p class="card-text"><span>Sintomas: </span> {{ cita.description }} </p>
                 
                         
-                <button class="btn btn-danger btn-block mb-2" (click)="deleteCita(cita.id).apagarCita(i)" >Eliminar</button>
+                <button class="btn btn-danger btn-block mb-2" (click)="deleteCita(cita.id)" >Eliminar</button>
                             
                 <button style="width: 100%;" type="button" class="btn btn-primary btn-block" (click)="editarCita(i)" >Editar</button>
         
