--- a/src/app/components/dados-cita/dados-cita.component.html
+++ b/src/app/components/dados-cita/dados-cita.component.html
@@ -1,1 +1,58 @@
-<p>dados-cita works!</p>
+<div class="card" style="width: 50%;">
+    <div class="card-body">
+        <h4 class="card-title text-center">Editar Cita</h4>
+    </div>
+    <form >
+        <div class="form-group mb-3">
+            <label for="nombre">Nome</label>
+            <input type="text" name="Name"
+            [(ngModel)]="cita.Name" class="form-control" placeholder="Insira seu nome">
+        </div>
+    
+        <div class="form-group mb-3">
+            <label for="fecha">Data</label>
+            <input type="date" name="date"
+            [(ngModel)]="cita.date" class="form-control">
+        </div>
+    
+        <div class="form-group mb-3">
+            <label for="hora">Hora</label>
+            <input type="time" name="time"
+            [(ngModel)]="cita.time" class="form-control">
+        </div>
+    
+        <div class="form-group mb-3">
+            <label for="sintomas">Sintomas</label>
+            <textarea name="description" [(ngModel)]="cita.description"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando"></textarea>
+        </div>
+        <button style="width: 100%;" class="btn btn-primary btn-block">Editar Cita</button> 
+    </form>
+</div>
+
+<!--  -->
+
+<!--  <form [formGroup]="atualizarForm" (ngSubmit)="onUpdateCita()">
+        <div class="form-group">
+        <label>name</label>
+        <input class="form-control" type="text" formControlName="name" required>
+        </div>
+
+        <div class="form-group">
+        <label>date</label>
+        <input class="form-control" type="text" formControlName="date" required>
+        </div>
+
+        <div class="form-group">
+            <label>time</label>
+            <input class="form-control" type="text" formControlName="time" required>
+        </div>
+
+        <div class="form-group">
+        <label>description</label>
+        <input class="form-control" type="text" formControlName="description" required>
+        </div>
+
+        <div class="form-group">
+        <button class="btn btn-primary btn-block" type="submit">Update</button>
+        </div>
+    </form> -->
