add validacao desde o frontend

--- a/src/app/components/crear-cita/crear-cita.component.css
+++ b/src/app/components/crear-cita/crear-cita.component.css
@@ -21,3 +21,7 @@ textarea {
     color: #000000;
     border-color: #000000;
 } 
+
+.ng-invalid.ng-touched:not(form) {
+    border: 1px solid red;
+}
