--- a/src/app/components/dados-cita/dados-cita.component.html
+++ b/src/app/components/dados-cita/dados-cita.component.html
@@ -1,98 +1,38 @@
-<div class="row justify-content-center mt-5">
-    <div class="col-md-4">
-      <form [formGroup]="atualizarForm" (ngSubmit)="onUpdateCita()">
-        <div class="form-group">
-          <label>Name</label>
-          <input class="form-control" type="text" formControlName="Name" required>
-        </div>
-  
-        <div class="form-group">
-          <label>Price</label>
-          <input class="form-control" type="text" formControlName="date" required>
-        </div>
+<div class="card" style="width: 50%;">
+  <div class="card-body">
+      <h4 class="card-title text-center">Editar Cita</h4>
+      <form>
+          <div class="form-group mb-3">
+              <label for="nombre">Nome</label>
+              <input type="text" name="nombre"
+              [(ngModel)]="atualCita.Name" class="form-control">
+          </div>
 
-        <div class="form-group">
-            <label>Price</label>
-            <input class="form-control" type="text" formControlName="time" required>
-        </div>
-  
-        <div class="form-group">
-          <label>Description</label>
-          <input class="form-control" type="text" formControlName="description" required>
-        </div>
-  
-        <div class="form-group">
-          <button class="btn btn-primary btn-block" type="submit">Update</button>
-        </div>
+          <div class="form-group mb-3">
+              <label for="date">Data</label>
+              <input type="date" name="date"
+              [(ngModel)]="atualCita.date" class="form-control">
+          </div>
+
+          <div class="form-group mb-3">
+              <label for="time">Hora</label>
+              <input type="time" name="time"
+              [(ngModel)]="atualCita.time" class="form-control">
+          </div>
+
+          <div class="form-group mb-3">
+              <label for="description">Sintomas</label>
+              <textarea name="description" [(ngModel)]="atualCita.description"  rows="3" class="form-control"></textarea>
+          </div>
+          <button style="width: 100%;" (click)="updateCita()" class="btn btn-primary btn-block">Editar Cita</button>
       </form>
-    </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="card" style="width: 50%;">
-    <div class="card-body">
-        <h4 class="card-title text-center">Editar Cita</h4>
-    </div>
-    <form [formGroup]="atualizarForm" (ngSubmit)="onUpdateCita()">
-        <div class="form-group mb-3">
-            <label for="Name">Nome</label>
-            <input type="text" class="form-control" formControlName="Name">
-        </div>
-    
-        <div class="form-group mb-3">
-            <label>Data</label>
-            <input type="text" class="form-control" formControlName="date">
-        </div>
-    
-        <div class="form-group mb-3">
-            <label>Hora</label>
-            <input type="text" class="form-control" formControlName="time">
-        </div>
-    
-        <div class="form-group mb-3">
-            <label>Sintomas</label>
-            <textarea class="form-control" formControlName="description" rows="3"></textarea>
-        </div>
-        <button style="width: 100%;" class="btn btn-primary btn-block" type="submit">Editar Cita</button> 
-    </form>
 </div>
- -->
-<!--  -->
 
-<!--  <form [formGroup]="atualizarForm" (ngSubmit)="onUpdateCita()">
-        <div class="form-group">
-        <label>name</label>
-        <input class="form-control" type="text" formControlName="name" required>
-        </div>
 
-        <div class="form-group">
-        <label>date</label>
-        <input class="form-control" type="text" formControlName="date" required>
-        </div>
 
-        <div class="form-group">
-            <label>time</label>
-            <input class="form-control" type="text" formControlName="time" required>
-        </div>
 
-        <div class="form-group">
-        <label>description</label>
-        <input class="form-control" type="text" formControlName="description" required>
-        </div>
 
-        <div class="form-group">
-        <button class="btn btn-primary btn-block" type="submit">Update</button>
-        </div>
-    </form> -->
+
+
+
