--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-image: linear-gradient( rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(./assets/imgcitas.jpg);
+    background-image: linear-gradient( rgba(0,0,0,0.6), rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(./assets/imgcitas.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
