--- a/src/app/components/crear-cita/crear-cita.component.html
+++ b/src/app/components/crear-cita/crear-cita.component.html
@@ -14,7 +14,7 @@
                 <input type="text" name="name"
                  class="form-control" [(ngModel)]="cita.Name" placeholder="Insira seu nome" required #Name="ngModel">
                 
-                 <div *ngIf=" !Name.valid && Name.touched" class="alert alert-danger d-flex align-items-center" role="alert">
+                 <div *ngIf=" !Name.valid && Name.touched" class="badge bg-danger">
                    <span> Nome é obrigatorio!</span>
                  </div>
                   <!--formControlName="Name"  -->
@@ -26,7 +26,7 @@
                 <input type="date" name="date"
                 [(ngModel)]="cita.date" class="form-control" required #date="ngModel">
                
-                <div *ngIf=" !date.valid && date.touched" class="alert alert-danger d-flex align-items-center" role="alert">
+                <div *ngIf=" !date.valid && date.touched" class="badge bg-danger">
                     <span>A data é obrigatória</span>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <input type="time" name="time"
                 [(ngModel)]="cita.time" class="form-control" required #time="ngModel">
                
-                <div *ngIf=" !time.valid && time.touched" class="alert alert-danger d-flex align-items-center" role="alert">
+                <div *ngIf=" !time.valid && time.touched" class="badge bg-danger">
                     <span>A hora é obrigatória</span>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <label for="sintomas">Sintomas</label>
                 <textarea name="description" [(ngModel)]="cita.description"  rows="3" class="form-control" placeholder="Insira os sintomas que você está apresentando" required #description="ngModel"></textarea>
                
-                <div *ngIf=" !description.valid && description.touched" class="alert alert-danger d-flex align-items-center" role="alert">
+                <div *ngIf=" !description.valid && description.touched" class="badge bg-danger">
                 <span>Os sintomas são obrigatórios</span>
                 </div>
             </div>
