--- a/src/app/components/dados-cita/dados-cita.component.html
+++ b/src/app/components/dados-cita/dados-cita.component.html
@@ -1,30 +1,50 @@
 <div class="card" style="width: 50%;">
   <div class="card-body">
       <h4 class="card-title text-center">Editar Cita</h4>
-      <form>
-          <div class="form-group mb-3">
+      
+      <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+          
+        <div class="form-group mb-3">
               <label for="nombre">Nome</label>
-              <input type="text" name="nombre"
-              [(ngModel)]="atualCita.Name" class="form-control">
+              <input type="text" name="name" class="form-control"
+              [(ngModel)]="atualCita.Name" placeholder="Insira seu nome" required #Name="ngModel">
+
+              <div *ngIf=" !Name.valid && Name.touched" class="badge bg-danger">
+                <span> Nome é obrigatorio!</span>
+              </div>
+
           </div>
 
           <div class="form-group mb-3">
               <label for="date">Data</label>
               <input type="date" name="date"
-              [(ngModel)]="atualCita.date" class="form-control">
+              [(ngModel)]="atualCita.date" class="form-control" required #date="ngModel">
+
+              <div *ngIf=" !date.valid && date.touched" class="badge bg-danger">
+                <span> Data é obrigatorio!</span>
+              </div>
           </div>
 
           <div class="form-group mb-3">
               <label for="time">Hora</label>
               <input type="time" name="time"
-              [(ngModel)]="atualCita.time" class="form-control">
+              [(ngModel)]="atualCita.time" class="form-control" required #time="ngModel">
+
+              <div *ngIf=" !time.valid && time.touched" class="badge bg-danger">
+                <span> Hora é obrigatorio!</span>
+              </div>
+
           </div>
 
           <div class="form-group mb-3">
               <label for="description">Sintomas</label>
-              <textarea name="description" [(ngModel)]="atualCita.description"  rows="3" class="form-control"></textarea>
+              <textarea name="description" [(ngModel)]="atualCita.description"  rows="3" class="form-control" required #description="ngModel"></textarea>
+
+              <div *ngIf=" !description.valid && description.touched" class="badge bg-danger">
+                <span> Sintomas é Sintomas!</span>
+              </div>
           </div>
-          <button style="width: 100%;" (click)="updateCita()" class="btn btn-primary btn-block">Editar Cita</button>
+          <button type="submit" style="width: 100%;" (click)="updateCita()" class="btn btn-primary btn-block" [disabled]="!f.valid">Editar Cita</button>
       </form>
   </div>
 </div>
