--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -5,6 +5,9 @@
         <h5 class="card-title text-center">Não há compromissos para mostrar</h5>
     </div>
 </div> -->
+<div class="alert alert-dark" role="alert">
+    <p>{{errorMessage}}</p>
+</div>
 
 <div class="container">
     <div class="row">
@@ -15,8 +18,8 @@
                 <p class="card-text"><span>Data: </span> {{ cita.date }} </p>
                 <p class="card-text"><span>Hora: </span> {{ cita.time }} </p>
                 <p class="card-text"><span>Sintomas: </span> {{ cita.description }} </p>
-                
-                        
+
+                       
                 <button class="btn btn-danger btn-block mb-2" (click)="deleteCita(cita.id)" (click)="onDelete(cita)">Eliminar</button>
                             
                 <button style="width: 100%;" type="button" class="btn btn-primary btn-block" routerLink="/edit-cita/{{cita.id}}" >Editar</button>
@@ -31,7 +34,7 @@
       <button type="button" class="btn btn-default" (click)="onConfirmDelete()" >Yes</button>
       <button type="button" class="btn btn-primary" (click)="onDeclineDelete()" >No</button>
     </div>
-  </ng-template>
+</ng-template>
 
 
     <!--  -->
