--- a/src/app/components/dados-cita/dados-cita.component.html
+++ b/src/app/components/dados-cita/dados-cita.component.html
@@ -46,6 +46,9 @@
           </div>
           <button type="submit" style="width: 100%;" (click)="updateCita()" class="btn btn-primary btn-block" [disabled]="!f.valid">Editar Cita</button>
       </form>
+      <div class="text-center">
+        <span class="badge bg-danger">{{errorMessage}}</span>
+    </div>
   </div>
 </div>
 
