--- a/src/app/components/list-citas/list-citas.component.html
+++ b/src/app/components/list-citas/list-citas.component.html
@@ -1,14 +1,6 @@
-
-
-<!-- <div *ngIf="listadoCitas.length === 0" class="card" style="width: 50%;">
-    <div class="card-body">
-        <h5 class="card-title text-center">Não há compromissos para mostrar</h5>
-    </div>
-</div> -->
-<div class="alert alert-dark" role="alert">
-    <p>{{errorMessage}}</p>
+<div class="card-body">
+    <h5 class="card-title text-center">{{errorMessage}}</h5>
 </div>
-
 <div class="container">
     <div class="row">
         <div *ngFor="let cita of citas" class="card md-3 mb-2" style="width: 33%;">
@@ -20,7 +12,7 @@
                 <p class="card-text"><span>Sintomas: </span> {{ cita.description }} </p>
 
                        
-                <button class="btn btn-danger btn-block mb-2" (click)="deleteCita(cita.id)" (click)="onDelete(cita)">Eliminar</button>
+                <button class="btn btn-danger btn-block mb-2" (click)="onDelete(cita)">Eliminar</button>
                             
                 <button style="width: 100%;" type="button" class="btn btn-primary btn-block" routerLink="/edit-cita/{{cita.id}}" >Editar</button>
             </div>
@@ -35,6 +27,7 @@
       <button type="button" class="btn btn-primary" (click)="onDeclineDelete()" >Não</button>
     </div>
 </ng-template>
+
 
 
     <!--  -->
